--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
         </div>
       </div>
     </header>
+    <div class="banner">
+      <h1>Twitter da Rockeseat</h1>
+    </div>
   </body>
 </html>
